--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -536,10 +536,10 @@
                             <label for="prototypeAvailable">Prototype Available :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" selected
-                                value="Y">&nbsp;
+                                value="Y" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
-                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable"
-                                value="N">&nbsp;
+                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" value="N"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6" *ngIf="createStuvationForm.value.prototypeAvailable=='Y'">
@@ -563,10 +563,12 @@
                                 :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" selected value="Yes">&nbsp;
+                                formControlName="lookingProfessorGuidance" selected value="Yes"
+                                style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" value="No">&nbsp;
+                                formControlName="lookingProfessorGuidance" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -583,11 +585,11 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Yes">&nbsp;
-                            Yes&nbsp;&nbsp;
-                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="No">&nbsp;
-                            No
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
+                            <span>Yes</span>&nbsp;&nbsp;
+                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
+                            <span>No</span>
                         </div>
 
                         <div class="form-group col-6" *ngIf="createStuvationForm.value.projectStatus=='ongoing'">
@@ -605,10 +607,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Yes">&nbsp;
+                                selected value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -626,10 +628,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Yes">&nbsp;
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -860,10 +862,12 @@
                                     :</label>
                                 &nbsp;&nbsp;
                                 <input type="radio" name="lookingForEFSupportFlag"
-                                    formControlName="lookingForEFSupportFlag" selected value="Y">&nbsp;
+                                    formControlName="lookingForEFSupportFlag" selected value="Y"
+                                    style="position: relative;top: 3px;">&nbsp;
                                 Yes&nbsp;&nbsp;
                                 <input type="radio" name="lookingForEFSupportFlag"
-                                    formControlName="lookingForEFSupportFlag" value="N">&nbsp;
+                                    formControlName="lookingForEFSupportFlag" value="N"
+                                    style="position: relative;top: 3px;">&nbsp;
                                 No
                             </div>
                         </div>
@@ -1007,10 +1011,10 @@
                             <label for="prototypeAvailable"><span class="red">*</span> Prototype Available :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" selected
-                                value="Y">&nbsp;
+                                value="Y" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
-                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable"
-                                value="N">&nbsp;
+                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" value="N"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6" *ngIf="createProjtecStuvationForm.value.prototypeAvailable=='Y'">
@@ -1032,10 +1036,12 @@
                                 :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" selected value="Yes">&nbsp;
+                                formControlName="lookingProfessorGuidance" selected value="Yes"
+                                style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" value="No">&nbsp;
+                                formControlName="lookingProfessorGuidance" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1052,11 +1058,11 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Yes">&nbsp;
-                            Yes&nbsp;&nbsp;
-                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="No">&nbsp;
-                            No
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
+                            <span>Yes</span>&nbsp;&nbsp;
+                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
+                            <span>No</span>
                         </div>
 
                         <div class="form-group col-6" *ngIf="createProjtecStuvationForm.value.projectStatus=='ongoing'">
@@ -1074,10 +1080,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Yes">&nbsp;
+                                selected value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1095,10 +1101,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Yes">&nbsp;
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1887,10 +1893,10 @@
                             <label for="prototypeAvailable">Prototype Available :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" selected
-                                value="Y">&nbsp;
+                                value="Y" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
-                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable"
-                                value="N">&nbsp;
+                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" value="N"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6" *ngIf="createStuvationForm.value.prototypeAvailable=='Y'">
@@ -1914,10 +1920,12 @@
                                 :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" selected value="Yes">&nbsp;
+                                formControlName="lookingProfessorGuidance" selected value="Yes"
+                                style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" value="No">&nbsp;
+                                formControlName="lookingProfessorGuidance" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1934,11 +1942,11 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Yes">&nbsp;
-                            Yes&nbsp;&nbsp;
-                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="No">&nbsp;
-                            No
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
+                            <span>Yes</span>&nbsp;&nbsp;
+                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
+                            <span>No</span>
                         </div>
 
                         <div class="form-group col-6" *ngIf="statusValue=='ongoing'">
@@ -1956,10 +1964,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Yes">&nbsp;
+                                selected value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1977,10 +1985,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Yes">&nbsp;
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -2070,10 +2078,10 @@
                             <label for="prototypeAvailable"><span class="red">*</span> Prototype Available :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" selected
-                                value="Y">&nbsp;
+                                value="Y" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
-                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable"
-                                value="N">&nbsp;
+                            <input type="radio" name="prototypeAvailable" formControlName="prototypeAvailable" value="N"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6" *ngIf="createProjtecStuvationForm.value.prototypeAvailable=='Y'">
@@ -2095,10 +2103,12 @@
                                 :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" selected value="Yes">&nbsp;
+                                formControlName="lookingProfessorGuidance" selected value="Yes"
+                                style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
-                                formControlName="lookingProfessorGuidance" value="No">&nbsp;
+                                formControlName="lookingProfessorGuidance" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -2115,11 +2125,11 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Yes">&nbsp;
-                            Yes&nbsp;&nbsp;
-                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="No">&nbsp;
-                            No
+                                value="Yes" style="position: relative;top: 3px;">&nbsp;
+                            <span>Yes</span>&nbsp;&nbsp;
+                            <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" value="No"
+                                style="position: relative;top: 3px;">&nbsp;
+                            <span>No</span>
                         </div>
 
                         <div class="form-group col-6" *ngIf="statusInnValue=='ongoing'">
@@ -2137,10 +2147,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Yes">&nbsp;
+                                selected value="Yes" style="position: relative;top: 3px;">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="No">&nbsp;
+                                value="No" style="position: relative;top: 3px;">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
