--- a/src/app/staticdata/staticdata.component.html
+++ b/src/app/staticdata/staticdata.component.html
@@ -549,7 +549,7 @@
               &nbsp;&nbsp;&nbsp; <span>
                 <b>Event on</b> : {{selectedTechTeach.event_date}}</span>
               &nbsp;&nbsp;&nbsp; <span>
-                <b>Number of people applied</b> : {{selectedTechTeach.seat_capacity}}</span>
+                <b>Number of people applied</b> : {{selectedTechTeach.no_of_users_applied}}</span>
             </div>
           </div>
           <br />
@@ -640,7 +640,7 @@
                 <b>Event on</b> : {{selectedTechTalk.event_date}}</span>
               &nbsp;&nbsp;&nbsp;
               <span>
-                <b>Number of people applied</b> : </span>
+                <b>Number of people applied</b> : {{selectedTechTalk.no_of_users_applied}}</span>
 
             </div>
           </div>
