--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -230,7 +230,7 @@
                 &nbsp;&nbsp;&nbsp; <span>
                   <b>Event on</b> : {{selectedTechTeach.event_date}}</span>
                 &nbsp;&nbsp;&nbsp; <span>
-                  <b>Number of people applied</b> : {{selectedTechTeach.seat_capacity}}</span>
+                  <b>Number of people applied</b> : {{selectedTechTeach.no_of_users_applied}}</span>
               </div>
             </div>
             <br />
@@ -266,14 +266,15 @@
 
             </div>
             <div class="row">
-              <div class="col-md-6 col-sm-12 col-xs-12">
+              <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
                 <span class="cardSubHeading crd-hdng">Other Details</span>
                 <br />
+
                 <b>Tech Teach Type</b> : {{selectedTechTeach.tech_teach_type}}
                 <br />
                 <b>Tech Teach Topic</b> : {{selectedTechTeach.topic}}
                 <br />
-                <b>Abstract</b> : <p class="ovrflw_h">{{selectedTechTeach.abstract}}</p>
+                <b>Abstract</b> :<span style="word-wrap: break-word"> {{selectedTechTeach.abstract}}</span>
                 <br />
                 <b>Speaker Details</b> : {{selectedTechTeach.expert_name}}
                 <br />
@@ -320,7 +321,7 @@
                   <b>Event on</b> : {{selectedTechTalk.event_date}}</span>
                 &nbsp;&nbsp;&nbsp;
                 <span>
-                  <b>Number of people applied</b> : </span>
+                  <b>Number of people applied</b> : {{selectedTechTalk.no_of_users_applied}} </span>
 
               </div>
             </div>
