--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -7,10 +7,10 @@
   <div class="row">
     <div class="col-sm-2" style="text-align: center">
       <div>
-        <img class="profilepicture" *ngIf="strImage!=undefined" style="height: 111px;width:111px;border-radius:55%"
-          [src]="strImage" alt="Profile image">
+        <img class="profilepicture" *ngIf="getLoggedInUserObject()['image'] !=''"
+          style="height: 111px;width:111px;border-radius:55%" [src]="strImage" alt="Profile image">
 
-        <img class="profilepicture" style="border-radius: 10em;" *ngIf="strImage==undefined"
+        <img class="profilepicture" style="border-radius: 10em;" *ngIf="getLoggedInUserObject()['image'] ==''"
           src="../assets/images/user-dummy.png" alt="Profile Pic">
 
         <input *ngIf="editButton" class="form-control" type="file" accept="image1/*" (change)="readUrl($event,'image')">
